2011-01-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/VideoOptions_gump.cc: Fix accidental commit and left out
		conversion

2011-01-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	gumps/VideoOptions_gump.*: Fix canceling an apply saving the wrong
		values and not toggling fullscreen when needed.
	exult.cc: have set_resolution use new config values

2011-01-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc, gumps/VideoOptions_gump.*: Separate video settings for
		full screen and window. Revert changes that were meant to be
		used with newvideooptionsgump.shp.
	* Makefile.common, data/*, msvc*/: Remove newvideooptionsgum.shp

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/MiscOptionsGump.cc: Changed position and description
		of two options

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/Gamemenu_gump.cc: Allow more menus in Exult menu
	* gamewin.h: can_scroll_with_mouse() and set_mouse_with_scroll()
	* gumps/MiscOptionsGump.*: Add 3 options.
	* gumps/GameplayOptions_gump.cc: Don't show paperdolls when it is
		not an option.
	* all gumps except Gamemenu_gump.*: Only write to cfg once in
		save_settings()

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Renamed CombatOptionsGump.* to MiscOptionsGump.*
	* Updated project files for this and newvideooptions.shp

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc: Move cfg options so they don't get needlessly read
		during map build. Move config->write_back() to before
		initializing the Game_window. Use USE_OLD_VIDEO_OPTIONS_GUMP
	* gumps/VideoOptions_gump.cc : Move forced define of
		USE_OLD_VIDEO_OPTIONS_GUMP to header.

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.cc: only write to cfg once in Game_window::Game_window

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>